--- a/requirements.txt
+++ b/requirements.txt
@@ -17,3 +17,12 @@ Werkzeug==2.0.1
 opencv-contrib-python==4.5.4.60
 opencv-python==4.5.4.60
 openpyxl==3.0.7
+google-auth-oauthlib==0.4.4
+importlib-metadata==4.5.0
+joblib==1.0.1
+libclang==13.0.0
+matplotlib==3.4.2
+matplotlib-inline==0.1.3
+oauthlib==3.1.1
+requests-oauthlib==1.3.0
+urllib3==1.26.5
