--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,13 @@
-gunicorn==20.1.0
-numpy==1.22.3
+absl-py==0.13.0
+asttokens==2.0.5
+astunparse==1.6.3
+backcall==0.2.0
+cached-property==1.5.2
+cachetools==4.2.2
+certifi==2021.5.30
+cffi==1.14.5
+chardet==4.0.0
+clang==5.0
 click==7.1.2
 click-didyoumean==0.3.0
 cls-client==1.4.0
@@ -13,18 +21,78 @@ executing==0.8.3
 Flask==2.0.1
 Flask-Login==0.5.0
 Flask-SQLAlchemy==2.5.1
-Werkzeug==2.0.1
+flatbuffers==1.12
+gast==0.4.0
+gevent==21.1.2
+google-auth==1.32.0
+google-auth-oauthlib==0.4.4
+google-pasta==0.2.0
+greenlet==1.1.0
+grpcio==1.41.0
+gunicorn==20.1.0
+h5py==3.1.0
+idna==2.10
+importlib-metadata==4.5.0
+ipykernel==6.9.2
+ipython==8.1.1
+itsdangerous==2.0.1
+jedi==0.18.1
+Jinja2==3.0.1
+joblib==1.0.1
+jupyter-client==7.1.2
+jupyter-core==4.9.2
+keras==2.8.0
+keras-nightly==2.5.0.dev2021032900
+Keras-Preprocessing==1.1.2
+kiwisolver==1.3.1
+libclang==13.0.0
+Markdown==3.3.4
+MarkupSafe==2.0.1
+matplotlib==3.4.2
+matplotlib-inline==0.1.3
+nest-asyncio==1.5.4
+numpy==1.22.3
+oauthlib==3.1.1
 opencv-contrib-python==4.5.4.60
 opencv-python==4.5.4.60
 openpyxl==3.0.7
-importlib-metadata==4.5.0
-joblib==1.0.1
-libclang==13.0.0
-matplotlib==3.4.2
-matplotlib-inline==0.1.3
-oauthlib==3.1.1
-requests-oauthlib==1.3.0
-urllib3==1.26.5
+opt-einsum==3.3.0
+p==1.3.0
 pandas==1.2.5
+parso==0.8.3
+pickleshare==0.7.5
+Pillow==8.2.0
+prompt-toolkit==3.0.28
+protobuf==3.17.3
+psutil==5.9.0
+pure-eval==0.2.2
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.20
+Pygments==2.11.2
+pyparsing==2.4.7
+python-dateutil==2.8.1
+pytz==2021.1
+pyzmq==22.3.0
+requests==2.25.1
+requests-oauthlib==1.3.0
+rsa==4.7.2
+scikit-learn==0.24.2
+scipy==1.7.0
+six==1.15.0
+sklearn==0.0
+SQLAlchemy==1.4.10
+stack-data==0.2.0
 tensorflow-cpu==2.8.0
-keras==2.8.0
+threadpoolctl==2.2.0
+tornado==6.1
+traitlets==5.1.1
+typing-extensions==3.7.4.3
+urllib3==1.26.5
+wcwidth==0.2.5
+Werkzeug==2.0.1
+wrapt==1.12.1
+xlrd==2.0.1
+zipp==3.4.1
+zope.event==4.5.0
+zope.interface==5.4.0
