--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,14 @@
 {
-    "appService.showBuildDuringDeployPrompt": false,
-    "appService.defaultWebAppToDeploy": "/subscriptions/db6e8545-5c55-4abd-812c-62b38fa2f421/microsoft.web/sites/subscriptions/db6e8545-5c55-4abd-812c-62b38fa2f421/resourceGroups/SCE/providers/Microsoft.Web/sites/PlantClassification",
-    "appService.deploySubpath": "."
+  "appService.showBuildDuringDeployPrompt": false,
+  "appService.defaultWebAppToDeploy": "/subscriptions/db6e8545-5c55-4abd-812c-62b38fa2f421/microsoft.web/sites/subscriptions/db6e8545-5c55-4abd-812c-62b38fa2f421/resourceGroups/SCE/providers/Microsoft.Web/sites/PlantClassification",
+  "appService.deploySubpath": ".",
+  "python.testing.unittestArgs": [
+    "-v",
+    "-s",
+    ".",
+    "-p",
+    "*test.py"
+  ],
+  "python.testing.pytestEnabled": false,
+  "python.testing.unittestEnabled": true
 }
